--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,8 +10,8 @@ set(PROJECT "CarUI")
 project(${PROJECT})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -std=c++17 -fstrict-aliasing -pedantic-errors -pedantic -Wno-deprecated-declarations -Wno-unused-variable")
-set(HEADERS "gps.h" "dummy_gps.h" "ublox_gps.h" "SigmaDSP/SigmaDSP.h" "SigmaDSP/parameters.h" "SigmaDSP/tinyxml2.h" "radio.h" "amp.h" "arduino.h")
-set(SOURCES "main.cpp" "dummy_gps.cpp" "ublox_gps.cpp" "gps.cpp" "SigmaDSP/SigmaDSP.cpp" "SigmaDSP/tinyxml2.cpp" "radio.cpp" "amp.cpp" "arduino.cpp")
+set(HEADERS "gps.h" "dummy_gps.h" "ublox_gps.h" "SigmaDSP/SigmaDSP.h" "SigmaDSP/parameters.h" "SigmaDSP/tinyxml2.h" "radio.h" "amp.h" "arduino.h" "mpd.h" "util.h" )
+set(SOURCES "main.cpp" "dummy_gps.cpp" "ublox_gps.cpp" "gps.cpp" "SigmaDSP/SigmaDSP.cpp" "SigmaDSP/tinyxml2.cpp" "radio.cpp" "amp.cpp" "arduino.cpp" "mpd.cpp" "util.cpp")
 source_group("Header Files" FILES ${HEADERS})
 source_group("Source Files" FILES ${SOURCES})
 add_executable(${PROJECT} ${HEADERS} ${SOURCES} ${QT_RESOURCES})
@@ -21,6 +21,7 @@ target_link_libraries(${PROJECT}
     Qt5::Widgets
     Qt5::Location
     pthread
+    mpdclient
     )
 
 install(TARGETS CarUI DESTINATION bin)
